--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0px 25px 0px 25px;
+    margin: 25px 25px 0px 25px;
     height: 80vh; /* ✅ Centered in the middle of the page */
     text-align: center;
   }
@@ -169,6 +169,12 @@ html, body {
     color: #ffcc00;
     margin-bottom: 10px;
   }
+
+    /* ✅ Heading Styles */
+    .training-plans-container h3 {
+      color: #ddd;
+      margin-bottom: 10px;
+    }
   
   /* ✅ Subtitle Text */
   .training-plans-container p {
@@ -226,7 +232,7 @@ html, body {
   }
 
   .plan-benefits-li {
-    margin: 5px 0px 5px 0px;
+    margin: 10px 0px 5px 0px;
   }
   
   /* ✅ Plan Price */
